added reset btn

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         <p>Start the game</p>
       </div>
       <div id="how-to-play">
-        <p>How to play?</p>
+        <p>How to play</p>
       </div>
       <div id="crowd">
         <img class="crowd" src="images/group.png" alt="laughing crowed" />
@@ -81,6 +81,7 @@
         <i id="death" class="fa-sharp fa-solid fa-skull fa-3x"></i>
         <p class="death-text">Death:</p>
       </div>
+      <div id="reset">Reset</div>
     </div>
   </body>
 </html>
