characters change background when clicked

--- a/index.html
+++ b/index.html
@@ -34,36 +34,36 @@
         <img class="right-foot" src="images/right foot.png" alt="right foot" />
       </div>
       <div class="first-characters">
-        <p id="a">A</p>
-        <p id="b">B</p>
-        <p id="c">C</p>
-        <p id="d">D</p>
-        <p id="e">E</p>
-        <p id="f">F</p>
-        <p id="g">G</p>
-        <p id="h">H</p>
-        <p id="i">I</p>
+        <p class="char" id="a">A</p>
+        <p class="char" id="b">B</p>
+        <p class="char" id="c">C</p>
+        <p class="char" id="d">D</p>
+        <p class="char" id="e">E</p>
+        <p class="char" id="f">F</p>
+        <p class="char" id="g">G</p>
+        <p class="char" id="h">H</p>
+        <p class="char" id="i">I</p>
       </div>
       <div class="second-characters">
-        <p id="j">J</p>
-        <p id="k">K</p>
-        <p id="l">L</p>
-        <p id="m">M</p>
-        <p id="n">N</p>
-        <p id="o">O</p>
-        <p id="p">P</p>
-        <p id="q">Q</p>
+        <p class="char" id="j">J</p>
+        <p class="char" id="k">K</p>
+        <p class="char" id="l">L</p>
+        <p class="char" id="m">M</p>
+        <p class="char" id="n">N</p>
+        <p class="char" id="o">O</p>
+        <p class="char" id="p">P</p>
+        <p class="char" id="q">Q</p>
       </div>
       <div class="third-characters">
-        <p id="r">R</p>
-        <p id="s">S</p>
-        <p id="t">T</p>
-        <p id="u">U</p>
-        <p id="v">V</p>
-        <p id="w">W</p>
-        <p id="x">X</p>
-        <p id="y">Y</p>
-        <p id="z">Z</p>
+        <p class="char" id="r">R</p>
+        <p class="char" id="s">S</p>
+        <p class="char" id="t">T</p>
+        <p class="char" id="u">U</p>
+        <p class="char" id="v">V</p>
+        <p class="char" id="w">W</p>
+        <p class="char" id="x">X</p>
+        <p class="char" id="y">Y</p>
+        <p class="char" id="z">Z</p>
       </div>
       <div id="play-btn">
         <i class="fa-solid fa-play fa-5x"></i>
@@ -83,5 +83,6 @@
       </div>
       <div id="reset">Reset</div>
     </div>
+    <script type="text/javascript" src="script.js"></script>
   </body>
 </html>
