--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
         <p class="char" id="z">Z</p>
       </div>
       <div id="play-btn">
-        <i class="fa-solid fa-play fa-5x"></i>
-        <p>Start the game</p>
+        <i id="the-button" class="fa-solid fa-play fa-5x"></i>
+        <p id="start">Start the game</p>
       </div>
       <div id="how-to-play">
         <p>How to play</p>
@@ -77,9 +77,9 @@
       </div>
       <div id="scores">
         <i id="score" class="fa-solid fa-star fa-3x"></i>
-        <p class="score-text">Score:</p>
+        <p class="score-text">Score:0</p>
         <i id="death" class="fa-sharp fa-solid fa-skull fa-3x"></i>
-        <p class="death-text">Death:</p>
+        <p class="death-text">Death:0</p>
       </div>
       <div id="reset">Reset</div>
     </div>
