guessed word is added

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
       </div>
       <div id="play-btn">
         <i id="the-button" class="fa-solid fa-play fa-5x"></i>
-        <p id="start">Start the game</p>
+        <p id="start-the-game">Start the game</p>
       </div>
       <div id="how-to-play">
         <p>How to play</p>
@@ -83,6 +83,7 @@
       </div>
       <div id="reset">Reset</div>
     </div>
+    <div id="guess-word">Random</div>
     <script type="text/javascript" src="script.js"></script>
   </body>
 </html>
