default style game after pressing play btn

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   </head>
   <body>
     <div class="main-container">
-      <div class="hangman">
+      <div id="hangman-container" class="hangman">
         <img class="tree" src="images/base.png" alt="base of tree" />
         <img class="rope" src="images/rope.png" alt="rope" />
         <img class="neck" src="images/neck.png" alt="neck" />
