add a body part per character wrong

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
       </div>
       <div id="reset">Reset</div>
     </div>
-    <div id="guess-word">Random</div>
+    <div id="guess-word"></div>
     <script type="text/javascript" src="script.js"></script>
   </body>
 </html>
